Updates to cfg and class name

--- a/Sprite/Sprite.cfg
+++ b/Sprite/Sprite.cfg
@@ -14,14 +14,13 @@ name = Sprite
 developer = Lennychu
 
 # Short description of the bot
-description = This is a multi-line description
-    of the official python example bot
+description = A Basic python bot created by Lennychu
 
 # Fun fact about the bot
 fun_fact = 
 
 # Link to github repository
-github = 
+github = https://github.com/lennychuCS/rl_Sprite
 
 # Programming language
 language = python
